# ESQLA

./: .gitignore  Pipfile  README.md  app.py  core.py  db.py  docker-compose.yml  local_db  local_db.sh  pyproject.toml  test_app.py  test_exceptions_and_transactions.py
ch12/: alembic.ini
ch12/alembic/: env.py
ch12/alembic/versions/: 134d1ba7cd27_renaming_cookies_to_new_cookies.py  1c95c9036ddf_add_cookie_model.py  b05a0df0eda3_empty_init.py
ch12/app/: db.py
