[tool.poetry]
name = "esqla"
version = "0.1.0"
description = ""
authors = ["Yung-Jin (Joey) Hu <yungjinhu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.8.6"
SQLAlchemy = "^1.3.22"
alembic = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pylint = "^2.6.0"
pytest = "^6.2.1"
ipython = "^7.31.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
